Told EF to use the Initializer class in Webconfig

--- a/Contos/Contos/Web.config
+++ b/Contos/Contos/Web.config
@@ -63,6 +63,12 @@
     </modules>
   </system.webServer>
   <entityFramework>
+    <!--Tell EF to Use the Initializer class-->
+    <contexts>
+      <context type="Contos.DAL.SchoolContext, Contos">
+        <databaseInitializer type="Contos.DAL.SchoolInitializer, Contos" />
+      </context>
+    </contexts>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
         <parameter value="v13.0" />
